Istio/online-boutique/task2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
spec:
  hosts:
    - "onlineboutique.example.com"
  gateways:
    - frontend-gateway
  http:
    - route:
        - destination:
            host: frontend
            subset: v1
          weight: 50
        - destination:
            host: frontend
            subset: v2
          weight: 50
